--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.23.26",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
